--- a/components/index.html
+++ b/components/index.html
@@ -178,7 +178,7 @@
 <body id="body" class="body" style="background-color: black; width: 100vw; font-weight: 300; padding: 0px; border: 0px; margin: 0px;"><center>
 
 
-	<div class="section-full-width-height home-cover" style="background-color:purple;background:url(.png), purple">
+	<div class="section-full-width-height home-cover" style=";background:url(https://Ares.tianqifeng1.repl.co/ipsc3.png);background-size:cover;background-position:center">
 		<img class="scrollIndicator" src="https://Ares.tianqifeng1.repl.co/Scrollindicator.png" height="33.5px" width="32.5px" style="padding-top:90vh">
 		<p id="cover-text" class="vertical-center" style="color:white;margin:0;border:0;padding-left:5vw;font-weight:100;font-size:7vh;letter-spacing:5vw;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;width:100vw">
 			MISSION COMPONENTS
@@ -186,15 +186,17 @@
 	</div>
 
 	
-	<div class="quarter-space" style=""></div>
+	
 
 
 		
-	<div class="container" style="background-color:black;font-size:22.5px;height:100vh;width:100%;text-align:center;">
+	<div class="container" style="background-color:black;font-size:22.5px;height:30vh;width:100%;text-align:center;">
 		<center><p class="vertical-center" style="width:80%;color:white;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;line-height:40px">
 				Since it is such a complex mission, Ares must incorporate many new innovations. These include larger launch vehicles, a next-generation spacecraft and a mars surface exploration base. Explore the systems of the Ares mission below.
 		</p></center>
 	</div>
+
+	
 
 
 
@@ -204,7 +206,7 @@
 	MISSION SYSTEMS
 	</div>
 
-	<div class="section-half-height" style=""></div>
+	<div class="quarter-space" style=""></div>
 
 
 
