--- a/components/spacecraft/index.html
+++ b/components/spacecraft/index.html
@@ -194,7 +194,7 @@
 <body id="body" class="body" style="background-color: black; width: 100vw; font-weight: 300; padding: 0px; border: 0px; margin: 0px;"><center>
 
 
-	<div class="section-full-width-height home-cover" style="">
+	<div class="section-full-width-height home-cover" style="background:url(ipsc5.png);background-position:">
 		<img class="scrollIndicator" src="https://Ares.tianqifeng1.repl.co/Scrollindicator.png" height="33.5px" width="32.5px" style="padding-top:90vh">
 		<div id="cover-text" class="vertical-center" style="color:white;margin:0;border:0;padding-left:0;font-weight:100;font-size:7vh;letter-spacing:0;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
 			SPACECRAFT
